# dns-extraction

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
dns-encoding/: Cargo.toml
dns-encoding/src/: client.rs  decode.rs  encode.rs  lib.rs  message.rs  server.rs  translation_tests.rs
server/: Cargo.toml
server/src/: main.rs
