[package]
name = "client"
version = "0.1.0"
authors = ["hwse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
trust-dns-proto = "0.19.5"
dns-encoding = { path = "../dns-encoding" }
log = "0.4"
env_logger = "0.7.1"